添加方案车删除商品逻辑。

--- a/templates/share/base_layout_with_search.html
+++ b/templates/share/base_layout_with_search.html
@@ -76,7 +76,7 @@
                     </div>
                     <div class="cart-footer">
                         <span>0个产品</span>
-                        <a href="#" class="out-btn">导出</a>
+                        <a href="javascript:void(0);" class="out-btn">导出</a>
                         <div class="clear"></div>
                     </div>
                 </div>
@@ -137,15 +137,13 @@
             return '<li><img src="' + imageUrl + '"/> <span class="product-name">' + name + '</span> <a productSkuId="'+productSkuId +'" productId="' + productId +'" class="del-btn"> </a> </li>';
         }
         $.get('{% url "gift_platform_site:cart" %}', function(response) {
+            $('.cart-content .product-list ul').empty();
             if (response.length === 0) {
                 $('.cart-info').text('您没有礼品方案');
-                $('.cart-wrap .product-list ul').empty();
-                console.log(1)
-                $('.cart-wrap .product-list ul').html('<div class="no-data">暂无商品</div>');
+                $('.cart-content .product-list ul').html('<div class="no-data">暂无商品</div>');
             } else {
                 $('.cart-info').text('包含' + response.length + '个商品');
             }
-            $('.cart-content .product-list ul').empty();
             for (var i in response) { // 开始初始化相关商品信息
                 var itemHtml = generateCartListHtmlStr(response[i].mainImage, response[i].productName, response[i].productId, response[i].productSkuId);
                 $('.cart-content .product-list ul').append(itemHtml)
@@ -158,7 +156,7 @@
             if (confirm('确认删除此商品?')) {
                 var productId = $(this).attr('productId');
                 $.ajax({
-                    url: '{% url 'gift_platform_site:cart' %}?productId=' + productId,
+                    url: '/cart/' + productId,
                     type: 'DELETE',
                     headers: {
                         'X-CSRFToken': csrftoken
@@ -176,15 +174,13 @@
             return '<li><img src="' + imageUrl + '"/> <span class="product-name">' + name + '</span> <a productSkuId="'+productSkuId +'" productId="' + productId +'" class="del-btn"> </a> </li>';
         }
         $.get('{% url "gift_platform_site:cart" %}', function(response) {
+            $('.cart-content .product-list ul').empty();
             if (response.length === 0) {
                 $('.cart-info').text('您没有礼品方案');
-                $('.cart-wrap .product-list ul').empty();
-                console.log(1)
-                $('.cart-wrap .product-list ul').html('<div class="no-data">暂无商品</div>');
+                $('.cart-content .product-list ul').html('<div class="no-data">暂无商品</div>');
             } else {
                 $('.cart-info').text('包含' + response.length + '个商品');
             }
-            $('.cart-content .product-list ul').empty();
             for (var i in response) { // 开始初始化相关商品信息
                 var itemHtml = generateCartListHtmlStr(response[i].mainImage, response[i].productName, response[i].productId, response[i].productSkuId);
                 $('.cart-content .product-list ul').append(itemHtml)
