--- a/templates/share/base_layout_with_search.html
+++ b/templates/share/base_layout_with_search.html
@@ -76,7 +76,7 @@
                     </div>
                     <div class="cart-footer">
                         <span>0个产品</span>
-                        <a href="javascript:void(0);" class="out-btn">导出</a>
+                        <a href="javascript:void(0);" id="export-ppt-btn" class="out-btn">导出</a>
                         <div class="clear"></div>
                     </div>
                 </div>
@@ -167,6 +167,21 @@
                 });
             }
         });
+        $('#export-ppt-btn').click(function() {
+            if (confirm('是否导出为PPT?')) {
+                $.ajax({
+                    url: '{% url 'gift_platform_site:export_ppt' %}',
+                    type: 'POST',
+                    headers: {
+                        'X-CSRFToken': csrftoken
+                    },
+                    success: function(data) {
+                        console.log(data.file_url)
+                        window.location.href=data.file_url;
+                    }
+                });
+            }
+        })
     };
 
     var refreshCart = function() {
