--- a/static_assets/gift_platform_site/style.css
+++ b/static_assets/gift_platform_site/style.css
@@ -1196,7 +1196,8 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
       padding: 7px 9px;
       -webkit-border-radius: 6px 6px 0 0;
       border-radius: 6px 6px 0 0;
-      color: #B19B70; }
+      color: #B19B70;
+      cursor: pointer; }
     .search .tab .select {
       color: #FFFFFF;
       background: #B19B70; }
@@ -1375,6 +1376,8 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
 /*! sass-mixins - v0.12.0 - 2015-08-26 */
 .product-list-item {
   width: 267px; }
+  .product-list-item a {
+    text-decoration: none; }
   .product-list-item .image-cover {
     width: 267px;
     height: 267px;
@@ -1824,7 +1827,8 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
     top: 372px;
     left: 0px;
     -webkit-border-radius: 64px;
-    border-radius: 64px; }
+    border-radius: 64px;
+    cursor: pointer; }
 
 .product-details-wrap .product-details {
   margin-top: 30px; }
