--- a/templates/sign/login.html
+++ b/templates/sign/login.html
@@ -24,6 +24,7 @@
                 <a href="javascript:void(0)" onclick="document.getElementById('loginform').submit()">登录</a>
 
             </div>
+            <input hidden name="next" type="text" value="{{ next }}"/>
             <div class="loginbtndiv">
                 {% if error_message %}
                 <span style="color: red">{{ error_message }}</span>
