--- a/static_assets/gift_platform_site/style.css
+++ b/static_assets/gift_platform_site/style.css
@@ -162,7 +162,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
             float: right;
             width: 15px;
             height: 15px;
-            background: url(f78b2e77f1f0eea475ce2b165b0c4d8e.png) no-repeat;
+            background: url(../images/close.png) no-repeat;
             background-size: 15px 15px; }
       .search-head-wrap .search-wrap .cart-wrap .cart {
         position: relative;
@@ -193,11 +193,11 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
         padding-right: 19px;
         margin-right: 7px; }
       .search-head-wrap .search-wrap .cart-wrap .drop-down {
-        background: url(c4d71663a3564c3713fdda9fc6a5334c.png) no-repeat;
+        background: url(../images/arrow_down.png) no-repeat;
         background-position: right;
         background-size: 12px 7px; }
       .search-head-wrap .search-wrap .cart-wrap .drop-up {
-        background: url(07a1995705407a455257a25d350d9811.png) no-repeat;
+        background: url(../images/arrow_up.png) no-repeat;
         background-position: right;
         background-size: 12px 7px; }
       .search-head-wrap .search-wrap .cart-wrap .split {
@@ -216,13 +216,10 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
 /*! sass-mixins - v0.12.0 - 2015-08-26 */
 .product-list-wrap .product-list-item {
   float: left; }
-
 .product-list-wrap .product-list-item:not(:nth-child(4n)) {
   margin-right: 24px; }
-
 .product-list-wrap .product-list-item {
   margin-top: 31px; }
-
 .product-list-wrap .no-data {
   text-align: center;
   color: #999999;
@@ -377,7 +374,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
     width: 350px;
     height: 100%;
     background-color: #B19B70;
-    background-image: url(c8b13e36074f27a91f22d1546297dc2c.png); }
+    background-image: url(../images/supplier.png); }
     .regtypes .choose1 div {
       border-radius: 100px;
       width: 108px;
@@ -405,7 +402,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
     height: 100%;
     width: 350px;
     background-color: #B19B70;
-    background-image: url(8197297633ea478a32d2d3029ab830c0.png); }
+    background-image: url(../images/giftcompany.png); }
     .regtypes .choose2 div {
       border-radius: 100px;
       width: 108px;
@@ -1176,7 +1173,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
 /*! sass-mixins - v0.12.0 - 2015-08-26 */
 .search {
   border: 2px #B19B70 solid;
-  background: url(cb63fec92c417b1fe3a1ffbdfc504309.png) no-repeat;
+  background: url(../images/search.png) no-repeat;
   -webkit-background-size: 25px 25px;
   background-size: 25px 25px;
   background-position-y: center;
@@ -1297,7 +1294,7 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
           float: right;
           width: 15px;
           height: 15px;
-          background: url(f78b2e77f1f0eea475ce2b165b0c4d8e.png) no-repeat;
+          background: url(../images/close.png) no-repeat;
           background-size: 15px 15px; }
     .nav .cart-wrap .cart {
       position: relative;
@@ -1328,11 +1325,11 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
       padding-right: 19px;
       margin-right: 7px; }
     .nav .cart-wrap .drop-down {
-      background: url(c4d71663a3564c3713fdda9fc6a5334c.png) no-repeat;
+      background: url(../images/arrow_down.png) no-repeat;
       background-position: right;
       background-size: 12px 7px; }
     .nav .cart-wrap .drop-up {
-      background: url(07a1995705407a455257a25d350d9811.png) no-repeat;
+      background: url(../images/arrow_up.png) no-repeat;
       background-position: right;
       background-size: 12px 7px; }
     .nav .cart-wrap .split {
@@ -1539,7 +1536,6 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
 .container .brand-list-item {
   float: left;
   margin-top: 50px; }
-
 .container .brand-list-item:not(:nth-child(5n)) {
   margin-right: 85px; }
 
@@ -1547,7 +1543,6 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
 .form-item label {
   color: #333333;
   font-size: 18px; }
-
 .form-item input, .form-item .drop-down, .form-item .drop-down1 {
   -webkit-border-radius: 53px;
   border-radius: 53px;
@@ -1561,13 +1556,11 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
     color: #999999; }
   .form-item input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-item .drop-down1:-ms-input-placeholder {
     color: #999999; }
-
 .form-item input:focus, .form-item .drop-down:focus, .form-item .drop-down1:focus {
   outline: none; }
-
 .form-item .drop-down {
   padding: 9px 0px 9px 58px;
-  background: url(c4d71663a3564c3713fdda9fc6a5334c.png) no-repeat;
+  background: url(../images/arrow_down.png) no-repeat;
   background-position: 135px;
   background-size: 12px 7px;
   width: 100px;
@@ -1579,7 +1572,6 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
     display: inline-block;
     float: right;
     margin-right: 28px; }
-
 .form-item .drop-down1 {
   background-position: 135px;
   background-size: 12px 7px;
@@ -1703,12 +1695,10 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
 
 .supplier-product-list .name {
   text-align: left; }
-
 .supplier-product-list .subscribe-btn {
   font-size: 14px;
   float: left !important;
   margin-top: 20px; }
-
 .supplier-product-list .social-btns-wrap {
   float: right; }
   .supplier-product-list .social-btns-wrap .social-btn {
@@ -1730,7 +1720,6 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
     width: 430px;
     height: 430px;
     border: 1px solid #CCCCCC; }
-
 .product-details-wrap .product-details-header .product-images .product-image-list {
   float: left;
   margin-left: 12px; }
@@ -1742,7 +1731,6 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
     .product-details-wrap .product-details-header .product-images .product-image-list ul li img {
       width: 78px;
       height: 78px; }
-
 .product-details-wrap .product-details-header .product-title {
   position: relative;
   margin-left: 60px;
@@ -1829,7 +1817,6 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
     -webkit-border-radius: 64px;
     border-radius: 64px;
     cursor: pointer; }
-
 .product-details-wrap .product-details {
   margin-top: 30px; }
   .product-details-wrap .product-details .product-details-header {
@@ -1903,25 +1890,33 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
 .right-content .content .sex {
   float: left;
   width: 300px; }
-
 .right-content .content .mobile {
   float: left;
   width: 400px; }
-
 .right-content .content .group {
   margin-top: 38px; }
-
 .right-content .content .email {
   display: block;
   margin-top: 38px; }
   .right-content .content .email input, .right-content .content .email .form-item .drop-down, .form-item .right-content .content .email .drop-down, .right-content .content .email .form-item .drop-down1, .form-item .right-content .content .email .drop-down1 {
     width: 424px; }
-
 .right-content .save-btn {
   width: 460px;
   padding: 10px 0px;
   margin-left: 58px;
   margin-top: 38px; }
+
+.msgcentertable tr th:nth-child(1), .msgcentertable tr th:nth-child(2), .msgcentertable tr th:nth-child(3), .msgcentertable tr th:nth-child(4), .msgcentertable tr th:nth-child(5), .msgcentertable tr th:nth-child(6) {
+  border: 1px solid #CCCCCC;
+  vertical-align: middle;
+  text-align: center; }
+
+.msgcentertable tr td:nth-child(1), .msgcentertable tr td:nth-child(2), .msgcentertable tr td:nth-child(3), .msgcentertable tr td:nth-child(4), .msgcentertable tr td:nth-child(5), .msgcentertable tr td:nth-child(6) {
+  border: 1px solid #CCCCCC;
+  text-align: center;
+  vertical-align: middle;
+  color: #333333;
+  font-size: 15px; }
 
 .msgcentertable {
   margin-top: 40px;
@@ -1931,13 +1926,29 @@ input:-ms-input-placeholder, .form-item .drop-down:-ms-input-placeholder, .form-
     border: 1px solid #CCCCCC;
     height: 50px;
     font-size: 16px; }
-    .msgcentertable tr th {
-      border: 1px solid #CCCCCC;
-      vertical-align: middle;
-      text-align: center; }
-    .msgcentertable tr td {
-      border: 1px solid #CCCCCC;
-      text-align: center;
-      vertical-align: middle;
-      color: #333333;
-      font-size: 15px; }
+    .msgcentertable tr th:nth-child(1) {
+      width: 100px; }
+    .msgcentertable tr th:nth-child(2) {
+      width: 500px; }
+    .msgcentertable tr th:nth-child(3) {
+      width: 200px; }
+    .msgcentertable tr th:nth-child(4) {
+      width: 200px; }
+    .msgcentertable tr th:nth-child(5) {
+      width: 100px; }
+    .msgcentertable tr th:nth-child(6) {
+      width: 100px; }
+    .msgcentertable tr td:nth-child(1) {
+      width: 100px; }
+    .msgcentertable tr td:nth-child(2) {
+      width: 500px; }
+    .msgcentertable tr td:nth-child(3) {
+      width: 200px; }
+    .msgcentertable tr td:nth-child(4) {
+      width: 200px; }
+    .msgcentertable tr td:nth-child(5) {
+      width: 100px; }
+    .msgcentertable tr td:nth-child(6) {
+      width: 100px; }
+
+/*# sourceMappingURL=main.css.map */
