--- a/templates/share/base_layout_usercenter.html
+++ b/templates/share/base_layout_usercenter.html
@@ -13,7 +13,8 @@
         </div>
         <div class="category">
             <span class="category-header">私有域管理</span>
-            <a class="{% ifequal request.path '/usercenter/privatearea/suppliers' %}select{% endifequal %} nav-item">供应商管理</a>
+            <a class="{% ifequal request.path '/usercenter/privatearea/suppliers' %}select{% endifequal %} nav-item" href="{% url 'gift_platform_site:private_suppliers' %}">供应商管理</a>
+            <a class="{% ifequal request.path '/usercenter/privatearea/suppliers/new' %}select{% endifequal %} nav-item" href="{% url 'gift_platform_site:new_private_suppliers' %}">创建供应商</a>
         </div>
     </div>
 {% block content1 %}
