做系统消息

--- a/templates/inforcenter/msgcenter.html
+++ b/templates/inforcenter/msgcenter.html
@@ -18,7 +18,7 @@
                     <td>1</td>
                     <td>{{ item.title }}</td>
                     <td>{{ item.publishdate|date:'Y-m-d H:i:s' }}</td>
-                    <td>{{ item.content }}</td>
+                    <td>{{ item.fromuser }}</td>
                     <td>{% if item.hasread %}已读{% else %}未读{% endif %}</td>
                     <td><a href="{% url 'gift_platform_site:msgdetail' %}?m={{ item.id }}">查看</a></td>
                 </tr>
