--- a/templates/usercenter/private_area_supplier_list.html
+++ b/templates/usercenter/private_area_supplier_list.html
@@ -2,7 +2,13 @@
 {% block title %}一点礼品-公告中心{% endblock %}
 {% block content1 %}
     {% load static %}
-
+    {% if messages %}
+        <script>
+            {% for message in messages %}
+                alert('{{ message }}');
+            {% endfor %}
+        </script>
+    {% endif %}
 <div class="right-content">
     <div class="content">
 <table class="msgcentertable">
@@ -14,8 +20,8 @@
         <th>创建时间</th>
         <th>操作</th>
     </tr>
+    {% for supplier in suppliers %}
     <tr>
-        {% for supplier in suppliers %}
         <td>{{ supplier.id }}</td>
             {% with supplier.supplier_set.all|first as supplier_private %}
                 <td>{{ supplier_private.suppliername }}</td>
@@ -26,8 +32,8 @@
         <td>
             <a href="{% url "gift_platform_site:edit_private_suppliers" supplier_id=supplier.id %}">编辑</a>
         </td>
-        {% endfor %}
     </tr>
+    {% endfor %}
 </table>
     <div class="pagination">
         {% if suppliers.has_previous %}
