--- a/templates/share/base_layout_without_search.html
+++ b/templates/share/base_layout_without_search.html
@@ -132,7 +132,7 @@
                 href="#">售后服务</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="#">友情链接</a>
         </div>
         <div>
-            <p>一点公司版权所有 © 1997-2018 食品经营许可证：JY133****0111719</p>
+            <p>一点公司版权所有 © 1997-2018   沪ICP备 18016054号-1</p>
         </div>
     </div>
 </div>
